2008-04-18  Martin Lambers <marlam@marlam.de>

	* src/heightmap_selector.h, src/heightmap_selector.cpp,
	src/heightmap_quads_vs.glsl, src/heightmap_strip_vs.glsl,
	src/heightmap_fs.glsl, src/view_area.h, src/view_area.cpp,
	src/cvlview.h, src/cvlview.cpp, src/main.cpp, src/Makefile.am: Improve
	3D view implementation. Still buggy.
	* configure.ac: Require CVL >= 0.2.4 because of a bug fix in
	cvl_gl_state_save(). 3D view should work now.
	* configure.ac, doc/cvlview.texi: Bump version to 0.3.0.
	* src/heightmap_selector.cpp, src/view_area.cpp: 3D view tweaks.

2008-04-17  Martin Lambers <marlam@marlam.de>

	* src/heightmap_selector.h, src/heightmap_selector.cpp: Remove unused
	lock.
	* src/view_area.cpp: Start of 3D view implementation. No depth and no
	navigation yet.
	* src/heightmap_selector.h, src/heightmap_selector.cpp: Implement
	height factor spinbox/slider.

2008-04-16  Martin Lambers <marlam@marlam.de>

	* src/heightmap_selector.h, src/heightmap_selector.cpp,
	src/view_area.h, src/view_area.cpp, src/cvlview.h, src/cvlview.cpp,
	src/Makefile.am: Add widgets to select 3D views via height maps. The
	functionality is not yet implemented.
	* src/heightmap_selector.h, src/heightmap_selector.cpp,
	src/cvlview.cpp: Make GL context current before using CVL functions.

2008-04-14  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Use GL_CLAMP_TO_EDGE instead of GL_CLAMP for 
	textures.

2008-03-04  Martin Lambers <marlam@marlam.de>

	* mhlib/Makefile.am, src/Makefile.am: Fix potential problems with
	VPATH builds.

2008-02-26  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Update gnulib. Import havelib module.

2008-01-19  Martin Lambers <marlam@marlam.de>

	* *: Update license to GPLv3 or later.
	* gnulib/*: Update gnulib.

2008-01-18  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_alloc.h, mhlib/mh_alloc.c, mhlib/mh_math.h,
	mhlib/mh_math.c: Do not use "extern inline" because its semantics are
	incompatiblie between gcc-4.3 and prior versions.
