@@ -1,3 +1,8 @@
+2008-04-19  Martin Lambers <marlam@marlam.de>
+
+	* src/view_area.h, src/view_area.cpp: Use buffer objects for texture
+	coordinates and vertices to speed up 3D view rendering.
+
 2008-04-18  Martin Lambers <marlam@marlam.de>
 
 	* src/heightmap_selector.h, src/heightmap_selector.cpp,
